[package]
name = "pagi-orchestrator-main"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pagi-orchestrator-main"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
hyper = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures = "0.3"
interprocess = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# External API + LLM provider (available for runner-level integrations)
pagi-external-api-lib = { path = "../pagi-external-api-lib" }

# LOCAL PATH DEPENDENCY (sibling repo)
pagi-core-lib = { path = "../pagi-core-lib" }
